--- a/site/css/product.css
+++ b/site/css/product.css
@@ -5,18 +5,14 @@ div.page_menu {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-
 }
-
-
 img.product_eng {
     width: 90%;
     margin: 1rem auto;
     margin-top: 1em;
 }
 div.catdiv {
-    background-color: #000;
+    background-color: #000
     min-height: 150px;
     height: 100%;
     width: 91.1%;
@@ -27,7 +23,7 @@ div.cat_wrap.insider, div.cat_wrap.insider * {
     cursor: default;
 }
 div.cat_wrap {
-    margin: 0 auto;
+    margin: 3rem 0 auto;
     padding: 0;
     display: block;
     width: auto;
@@ -39,8 +35,6 @@ div.cat_wrap, div.cat_wrap * {
     cursor:pointer;
 }
 div.product_header {
-    background-color: #000;
-    border-bottom: 1px solid white;
     height: auto;
     width: 88.7%;
     margin: 0 auto;
@@ -49,8 +43,6 @@ div.product_header {
 }
 div.product_icons {
     width: 88.7%;
-    background-color: #000;
-    border-bottom: 1px solid white;
     height: auto;
     margin: 0 auto;
     padding: 0.5rem 1rem;
@@ -60,7 +52,6 @@ div.prod_img_buy {
     width: 30%;
     min-width: 280px;
     min-height: 100px;
-    background-color: #000;
     display: inline-block;
     margin: 0 auto;
     padding: 0;
@@ -68,12 +59,15 @@ div.prod_img_buy {
 }
 div.prod_text_box {
     width: 60%;
-    min-height: 300px;
+    /*min-height: 300px;*/
     margin: 2rem 1rem auto;
     height: auto;
     display: inline-block;
-    padding: 0 2rem;
+    padding: 2rem 2rem 0 2rem;
     vertical-align: top;
+}
+div.prod_text_box:nth-child(odd) {
+    background: #111;
 }
 div.prod_img_buy.product {
     cursor: default;
@@ -161,6 +155,13 @@ span.buy_info {
 h1.price {
     font-size: 4rem;
     display: inline;
+}
+h1.product {
+    font-size: 2rem;
+    color: #FFA400;
+}
+h2.product {
+    font-size: 1rem;
 }
 h5.curr {
     font-size: 1.2rem;
