--- a/site/css/main.css
+++ b/site/css/main.css
@@ -35,7 +35,7 @@ div.ecosqr2 {
     width: 32.7%;
 }
 div.ecotxt {
-    padding: 0.5rem;
+    padding: 1rem 1.2rem;
 }
 div.main_clients {
 	width: 91.1%;
