--- a/site/css/media.css
+++ b/site/css/media.css
@@ -72,7 +72,9 @@
 	div.main {
 		margin-top: 0.5em;
 	}
-
+	div.catdiv {
+		border-bottom: 1px solid #FFA400;
+	}
 	div#gallery {
 		width: 91%;
 	}
