--- a/site/css/product.css
+++ b/site/css/product.css
@@ -1,3 +1,4 @@
+
 div.page_menu {
     width: 91.1%;
     margin: 0 auto;
@@ -12,24 +13,35 @@ img.product_eng {
     margin-top: 1em;
 }
 div.catdiv {
-    background-color: #000
+    transition: color 0.4s ease-in-out, border 0.5s ease-in-out, font 0.6s ease-in-out, background-color 0.7s ease-in-out;
+    background-color: #000;
     min-height: 150px;
-    height: 100%;
+    height: auto;
     width: 91.1%;
     margin: 0 auto;
+    padding: 1rem 0;
     position: relative;
+    border-top: 1px solid #111;
+    border-bottom: 1px solid #111;
+}
+div.catdiv:hover {
+    transition: color 0.4s ease-in-out, border 0.5s ease-in-out, font 0.6s ease-in-out, background-color 0.7s ease-in-out;
+    border-top: 1px solid #FFA400;
+    border-bottom: 1px solid #FFA400;
 }
 div.cat_wrap.insider, div.cat_wrap.insider * {
     cursor: default;
 }
 div.cat_wrap {
-    margin: 3rem 0 auto;
+    background-color: #000;
+    margin: 2rem 0 auto;
     padding: 0;
     display: block;
     width: auto;
     min-height: 150px;
     height: auto;
 }
+
 
 div.cat_wrap, div.cat_wrap * {
     cursor:pointer;
@@ -58,7 +70,7 @@ div.prod_img_buy {
     height: 100%;
 }
 div.prod_text_box {
-    width: 60%;
+    width: 50%;
     /*min-height: 300px;*/
     margin: 2rem 1rem auto;
     height: auto;
@@ -66,14 +78,11 @@ div.prod_text_box {
     padding: 2rem 2rem 0 2rem;
     vertical-align: top;
 }
-div.prod_text_box:nth-child(odd) {
-    background: #111;
-}
+
 div.prod_img_buy.product {
     cursor: default;
 }
 div.prod_img_buy form {
-    padding: 0.5rem;
     width: 90%;
     height: auto;
     margin: 0 auto;
@@ -111,13 +120,13 @@ select.sel {
     /*padding: 1rem 0.5rem;*/
 }
 .payment_btn input[type="submit"] {
-    transition: color .3s ease-in-out;
+    transition: color 0.4s ease-in-out, border 0.6s ease-in-out, font 0.5s ease-in-out, background-color 0.5s ease-in-out;
     color: #fff;
     background: #000;
     font-size: 1.7em;
     cursor: pointer;
     border: 2px solid #fff;
-    border-radius: 6px;
+    border-radius: 5px;
     margin: 1rem 1.1rem;
    /* padding: 0 0.5rem;*/
     width: 100%;
@@ -125,9 +134,12 @@ select.sel {
     text-align: center;
 }
 .payment_btn input[type="submit"]:hover {
-    transition: color .3s ease-in-out;
-    color: #FFA400;
-    border: 2px solid #FFA400;
+    transition: color 0.4s ease-in-out, border 0.5s ease-in-out, font 0.6s ease-in-out, background-color 0.7s ease-in-out;
+    color: #000;
+    background-color: #FFA400;
+    border-width: 0px 30px 0px 30px;
+    border-color: #000;
+    font-weight: 700;
 }
 .payment_btn input[type="number"] {
     background: #111;
@@ -240,15 +252,18 @@ ul.other_point li{
 
 .buttons_before_prod, body.rtl .buttons_before_prod {
     text-align: center;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin: 0 auto;
+    padding: 0;
 }
 
+
 .buttons_before_prod a.cat_nav {
-    width: 7em;
-    margin: 1rem 0.5rem 0 0.5rem;
-    height: 1rem;
-    line-height: 1rem;
+    width: auto;
+    margin: 0 auto;
+    height: auto;
+    padding: 0;
+
+    /*line-height: 1rem;*/
     display: inline-block;
 }
 .product_header.black {
