--- a/site/css/style.css
+++ b/site/css/style.css
@@ -42,15 +42,19 @@ img.social_icon {
     padding: 0;
 }
 a {
-    transition: color .3s ease-in-out;
+    transition: color 0.3s ease-in-out, border 0.4s ease-in-out;
+    border-bottom: 0px solid #000;
+    padding-bottom: 0.2rem;
     color: #fefefe;
     text-decoration: none;
     padding: 0;
     cursor: pointer;
 }
 a:not(.grey):hover {
-    color: orange;
+    color: #FFA400;
     cursor: pointer;
+    transition: color 0.3s ease-in-out, border 0.4s ease-in-out;
+    border-bottom: 3px solid #FFA400;
 }
 a.active {
     color: lightblue
