--- a/site/css/main.css
+++ b/site/css/main.css
@@ -7,6 +7,17 @@ div.ecoflex {
     justify-content: space-between;
     /*align-items: center;*/   
 }
+div.main_text {
+    width: 91.1%;
+    margin: 0 auto;
+    border-bottom: 1px solid #FFA400;
+    border-top: 1px solid #FFA400;
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 0.3rem 0;
+}
 
 div.webstrip {
     height: auto;
