--- a/site/css/gallery.css
+++ b/site/css/gallery.css
@@ -120,7 +120,7 @@ iframe#the-video {
 #blackend .close {
     position: fixed;
     top: 1rem;
-    left: 1rem;
+    right: 1rem;
     z-index: 2;
     width: 1em;
     height: 1em;
