--- a/site/css/style.css
+++ b/site/css/style.css
@@ -151,13 +151,13 @@ h2.feedback_header {
 	font-size: 2rem;
 }
 
-#disqus_thread {
+#comment_thread {
 	width: 70%;
 	margin: 1rem auto 5rem auto;
 }
 
 @media screen and (max-width: 1000px) {
-	#disqus_thread {
+	#comment_thread {
 	    width: 100%;
 	    margin: 5rem auto 0 auto;
 	}
