--- a/site/css/product.css
+++ b/site/css/product.css
@@ -42,6 +42,16 @@ div.cat_wrap {
     height: auto;
 }
 
+div.tipsqr {
+    width: 43%;
+    display: inline-block;
+    background-color: #000;
+    margin: 1rem;
+    padding: 1rem;
+    vertical-align: top;
+    border-radius: 10px;
+}
+
 
 div.cat_wrap, div.cat_wrap * {
     cursor:pointer;
@@ -59,6 +69,7 @@ div.product_icons {
     margin: 0 auto;
     padding: 0.5rem 1rem;
     letter-spacing: 0.07em
+    background-color: #009900;
 }
 div.prod_img_buy {
     width: 30%;
